Render server errors in iframe

--- a/css/fiddler.less
+++ b/css/fiddler.less
@@ -380,10 +380,17 @@ form.fiddler-inline {
     clear: both;
 }
 
-.fiddler-response-editor {
+.fiddler-response-editor, .fiddler-response-frame {
     width: 100%;
     height: 100%;
     margin: 0;
+}
+
+.fiddler-response-frame {
+    border: 0;
+    background: white;
+    margin: 0;
+    padding: 0;
 }
 
 
