--- a/fiddler/template/method-tab.ejs
+++ b/fiddler/template/method-tab.ejs
@@ -28,6 +28,9 @@
         </form>
     </div>
     <div class="ui-layout-south">
-        <pre class="fiddler-response-editor"></pre>
+        <div style="width: 100%; height: 100%" class="fiddler-content">
+            <pre class="fiddler-response-editor"></pre>
+            <iframe src="about:blank" class="fiddler-response-frame" style="display: none"></iframe>
+        </div>
     </div>
 </div>
