Enable ENTER on method tab and show installation names

--- a/css/fiddler.less
+++ b/css/fiddler.less
@@ -393,7 +393,8 @@ form.fiddler-inline {
     padding: 0;
 }
 
-
-
-
-
+.ui-autocomplete {
+    max-height: 50%;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
