--- a/fiddler/template/method-tab.ejs
+++ b/fiddler/template/method-tab.ejs
@@ -23,8 +23,9 @@
     <div class="ui-layout-center">
         <h2 class="fiddler-method-name"/>
         <p class="fiddler-method-desc"/>
-        <form>
+        <form class="fiddler-method-form">
             <dl class="fiddler-method-params"/>
+            <p style="display: none"><input type="submit"/></p>
         </form>
     </div>
     <div class="ui-layout-south">
