Method index search form

--- a/css/fiddler.less
+++ b/css/fiddler.less
@@ -393,6 +393,19 @@ form.fiddler-inline {
     padding: 0;
 }
 
+.fiddler-method-search-form {
+    p {
+        margin: 0;
+        padding: 4px;
+        background: @toolbar-background;
+    }
+    input {
+        width: 100%;
+        box-sizing: border-box;
+    }
+}
+
+
 .ui-autocomplete {
     max-height: 50%;
     overflow-y: auto;
