--- a/css/fiddler.less
+++ b/css/fiddler.less
@@ -372,6 +372,10 @@ form.fiddler-inline {
     width: 500px;
     margin: 0;
     padding: 0;
+
+    & > input {
+        width: 100%;
+    }
 }
 
 .fiddler-method-params:after {
